color picker not saving input when clicked away #38812

Closed
opened 2014-02-24 17:28:56 +01:00 by pranavjit virdi · 6 comments

System Information
windows 7 64bit, GeForce GT 610

Blender Version
official testbuild, Date - 2014-02-20 05:32
Hash: 4789793

Short description of error
when color changed in the default circle color picker it goes back to the previous color when clicked away.
this does not happen when color is changed and then cursor is moved away then it automatically closes,

Exact steps for others to reproduce the error

  1. open blender
  2. go to the nearest color changeable thing( say blender internal's material: diffuse)
  3. click to open color picker
  4. change the color
  5. slowly take the cursor out of the whole color picker box( don't do it fast cause it then automatically closes)
  6. click to close the color picker(click outside the box) and then you'd see that there have been no changes to the color changed.
**System Information** windows 7 64bit, GeForce GT 610 **Blender Version** official testbuild, Date - 2014-02-20 05:32 Hash: 4789793 **Short description of error** when color changed in the default circle color picker it goes back to the previous color when clicked away. this does not happen when color is changed and then cursor is moved away then it automatically closes, **Exact steps for others to reproduce the error** 1) open blender 2) go to the nearest color changeable thing( say blender internal's material: diffuse) 3) click to open color picker 4) change the color 5) slowly take the cursor out of the whole color picker box( don't do it fast cause it then automatically closes) 6) click to close the color picker(click outside the box) and then you'd see that there have been no changes to the color changed.

Changed status to: 'Open'

Changed status to: 'Open'

Added subscriber: @PranavjitVirdi

Added subscriber: @PranavjitVirdi
Brecht Van Lommel self-assigned this 2014-02-24 19:48:10 +01:00

This issue was referenced by blender/blender-addons-contrib@97c66c9bf1

This issue was referenced by blender/blender-addons-contrib@97c66c9bf14090a0c45252bd68dcef9bf28661a5

This issue was referenced by 97c66c9bf1

This issue was referenced by 97c66c9bf14090a0c45252bd68dcef9bf28661a5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 97c66c9bf1.

Closed by commit 97c66c9bf1.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#38812
No description provided.