Fix T38812: color picker incorrectly cancelling operation when clicking next to it.