source/blender/editors/interface/interface_handlers.c
@@ -8092,7 +8092,10 @@ static int ui_handle_menu_event(bContext *C, const wmEvent *event, uiPopupBlockH
 				{
 					if ((level == 0) && (U.uiflag & USER_MENUOPENAUTO) == 0) {
 						/* for root menus, allow clicking to close */
-						menu->menuretval = UI_RETURN_OUT;
+						if (block->flag & (UI_BLOCK_OUT_1))
+							menu->menuretval = UI_RETURN_OK;
+						else
+							menu->menuretval = UI_RETURN_OUT;
 					}
 					else if (saferct && !BLI_rctf_isect_pt(&saferct->parent, event->x, event->y)) {
 						if (block->flag & (UI_BLOCK_OUT_1))
